--- a/index.html
+++ b/index.html
@@ -226,6 +226,6 @@
       </div>
     </section>
   </template>
-  <script src="./js/function.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
